--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -17,9 +17,9 @@ jobs:
       - name: Set up AWS CLI
         uses: aws-actions/configure-aws-credentials@v2
         with:
-          aws-access-key-id: ${{ variables.AWS_ACCESS_KEY_ID }}
+          aws-access-key-id: ${{ AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ variables.AWS_REGION }}
+          aws-region: ${{ AWS_REGION }}
 
       - name: Deploy SAM Template
         run: |
