check path actions

--- a/.github/workflows/sam_deploy.yml
+++ b/.github/workflows/sam_deploy.yml
@@ -3,9 +3,8 @@ name: AWS SAM Deploy
 on:
   workflow_dispatch:
   push:
-    paths:
-      - '**/*'
-      - '!**/*.github'
+    paths-ignore:
+      - '.github/**'
 
 jobs:
   sam_deploy:
