--- a/.github/workflows/sam_deploy.yml
+++ b/.github/workflows/sam_deploy.yml
@@ -2,6 +2,10 @@ name: AWS SAM Deploy
 
 on:
   workflow_dispatch:
+    inputs:
+      sam_app_name:
+        description: 'Name of the application to deploy'
+        required: false
   push:
     paths-ignore:
       - '.github/**'
