--- a/.github/workflows/cf_deploy.yml
+++ b/.github/workflows/cf_deploy.yml
@@ -6,25 +6,25 @@ on:
       cf_stack_name:
         description: 'Name of the stack to deploy'
         required: true
-  push:
-    paths-ignore:
-      - '.github/**'
 
 jobs:
   sam_deploy:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./iac
     steps:
       - name: Check cf_stack_name pattern
         run: |
           if [[ ! "${{ github.event.inputs.cf_stack_name }}" =~ ^[a-z0-9.-]+$ ]]; then
             echo "Invalid name of stack. It should match the pattern ^[a-z0-9.-]+$"
             exit 1
-          fi    
+          fi
       - uses: actions/checkout@v3
       - uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-access-key-id: ${{ vars.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ vars.AWS_REGION }}
-      - run: head -n10 ./CF.yaml &&  sed "s/##STACKNAME##/${{ inputs.cf_stack_name }}/g" ./CF.yaml && head -n10 ./CF.yaml
-      # - run: aws cloudformation create-stack --stack-name ${{ inputs.cf_stack_name }} --template-body ./CF.yaml --capabilities CAPABILITY_NAMED_IAM
+      - run: sed "s/##STACKNAME##/${{ inputs.cf_stack_name }}/g" ./CF.yaml && head -n10 ./CF.yaml
+      - run: aws cloudformation create-stack --stack-name ${{ inputs.cf_stack_name }} --template-body ./CF.yaml --capabilities CAPABILITY_NAMED_IAM
