--- a/.github/workflows/sam_deploy.yml
+++ b/.github/workflows/sam_deploy.yml
@@ -7,12 +7,15 @@ on:
         description: 'Name of the application to deploy'
         required: false
   push:
-    paths-ignore:
-      - '.github/**'
+    paths:
+      - 'sam_app/**'
 
 jobs:
   sam_deploy:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./sam_app
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v3
