--- a/.github/workflows/sam_deploy.yml
+++ b/.github/workflows/sam_deploy.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./sam_app
+        working-directory: sam_app
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v3
