--- a/.github/workflows/cf_deploy.yml
+++ b/.github/workflows/cf_deploy.yml
@@ -12,7 +12,8 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: iac
+        shell: bash
+        working-directory: ./iac
     steps:
       - name: TEST
         run: ls -la
