--- a/.github/workflows/cf_deploy.yml
+++ b/.github/workflows/cf_deploy.yml
@@ -13,29 +13,19 @@ jobs:
     defaults:
       run:
         shell: bash
-        working-directory: ./iac   
+        working-directory: ./iac
     steps:
-      - uses: actions/checkout@v3    
-      - name: TEST1
-        run: ls -la /home/runner/work/
-      - name: TEST2
-        run: ls -la /home/runner/work/mtcase/
-      - name: TEST3
-        run: ls -la /home/runner/work/mtcase/mtcase/
-      - name: TEST4
-        run: ls -la                           
-        # working-directory: iac/
-      # - name: Check cf_stack_name pattern
-      #   run: |
-      #     if [[ ! "${{ github.event.inputs.cf_stack_name }}" =~ ^[a-z0-9.-]+$ ]]; then
-      #       echo "Invalid name of stack. It should match the pattern ^[a-z0-9.-]+$"
-      #       exit 1
-      #     fi
-      # - uses: actions/checkout@v3
-      # - uses: aws-actions/configure-aws-credentials@v1
-      #   with:
-      #     aws-access-key-id: ${{ vars.AWS_ACCESS_KEY_ID }}
-      #     aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      #     aws-region: ${{ vars.AWS_REGION }}
-      # - run: sed "s/##STACKNAME##/${{ inputs.cf_stack_name }}/g" ./CF.yaml && head -n10 ./CF.yaml
+      - uses: actions/checkout@v3
+      - uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ vars.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ vars.AWS_REGION }}
+      - name: Check cf_stack_name pattern
+        run: |
+          if [[ ! "${{ github.event.inputs.cf_stack_name }}" =~ ^[a-z0-9.-]+$ ]]; then
+            echo "Invalid name of stack. It should match the pattern ^[a-z0-9.-]+$"
+            exit 1
+          fi
+      - run: sed "s/##STACKNAME##/${{ inputs.cf_stack_name }}/g" ./CF.yaml && head -n10 ./CF.yaml
       # - run: aws cloudformation create-stack --stack-name ${{ inputs.cf_stack_name }} --template-body ./CF.yaml --capabilities CAPABILITY_NAMED_IAM
