--- a/.github/workflows/cf_deploy.yml
+++ b/.github/workflows/cf_deploy.yml
@@ -28,4 +28,4 @@ jobs:
             exit 1
           fi
       - run: sed "s/##STACKNAME##/${{ inputs.cf_stack_name }}/g" ./CF.yaml
-      - run: aws cloudformation create-stack --stack-name ${{ inputs.cf_stack_name }} --template-body ./CF.yaml --capabilities CAPABILITY_NAMED_IAM
+      - run: aws cloudformation create-stack --stack-name ${{ inputs.cf_stack_name }} --template-body file://CF.yaml --capabilities CAPABILITY_NAMED_IAM
