--- a/.github/workflows/sam_deploy.yml
+++ b/.github/workflows/sam_deploy.yml
@@ -6,6 +6,9 @@ on:
       sam_app_name:
         description: 'Name of the application to deploy'
         required: false
+      cf_stack_name:
+        description: 'Name of the stack'
+        required: true
   push:
     paths:
       - 'sam_app/**'
@@ -26,5 +29,19 @@ jobs:
           aws-access-key-id: ${{ vars.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ vars.AWS_REGION }}
+      - name: Check cf_stack_name pattern
+        run: |
+          if [[ ! "${{ github.event.inputs.cf_stack_name }}" =~ ^[a-z0-9.-]+$ ]]; then
+            echo "Invalid name of stack. It should match the pattern ^[a-z0-9.-]+$"
+            exit 1
+          fi
+      - name: Get prefix output from cloudformation template
+        run: |
+          aws cloudformation describe-stacks \
+            --stack-name ${{ github.event.inputs.cf_stack_name }} \
+            --query 'Stacks[0].Outputs[?OutputKey==`ProjectPrefixOutput`].OutputValue' \
+            --output text >> $GITHUB_ENV
+      - name: Substitute "##STACKNAME##"
+        run: sed -i "s/##STACKNAME##/${{ inputs.cf_stack_name }}/g" ./template.yaml            
       - run: sam build --use-container
       - run: sam deploy --no-confirm-changeset --no-fail-on-empty-changeset --capabilities CAPABILITY_NAMED_IAM
