--- a/.github/workflows/sam_destroy.yml
+++ b/.github/workflows/sam_destroy.yml
@@ -8,7 +8,7 @@ on:
         required: true
 
 jobs:
-  sam_deploy:
+  sam_destroy:
     runs-on: ubuntu-latest
     steps:
       - uses: aws-actions/configure-aws-credentials@v1
